--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "start": "next start",
         "lint": "next lint"
     },
+    "overrides": {
+        "minimist": ">=1.2.6",
+        "semver": ">=7.5.4",
+        "prismjs": ">=1.30.0"
+    },
     "dependencies": {
         "@headlessui/react": "^2.2.4",
         "@mapbox/rehype-prism": "^0.9.0",
@@ -50,7 +55,7 @@
         "fast-glob": "^3.3.3",
         "form-data": "^4.0.3",
         "html2canvas": "^1.4.1",
-        "imap-simple": "^5.1.0",
+        "imap-simple": "^1.6.3",
         "jspdf": "^3.0.1",
         "lucide-react": "^0.511.0",
         "mailgun.js": "^12.0.2",
